# CSE-330

./: .gitignore  README.md  RegExReJection.vcxproj  main.cpp
Project-2/: Project-2.sln  (+5 more)
Project2/: .entry.cpp.swp  .gitignore  CMakeLists.txt  Makefile  autobuild.sh  build.sh  build_rapid.sh  entry.cpp  federalist.txt  mmap_file.cpp  mmap_file.h  mr  word_trie.cpp  word_trie.h  world192.txt
Project2/Documents/: Design.docx  explanation.docx
Project2/MapReduce/: Makefile  entry.cpp  mmap_file.cpp  mmap_file.h  mr  mt_essentials.cpp  mt_essentials.h  word_trie.cpp  word_trie.h
Project2/TestDir/: map-out-10.txt  map-out-11.txt  map-out-12.txt  map-out-13.txt  map-out-14.txt  map-out-15.txt  map-out-16.txt  map-out-17.txt  map-out-18.txt  map-out-19.txt  map-out-20.txt  map-out-3.txt  map-out-4.txt  map-out-5.txt  map-out-6.txt  map-out-7.txt  map-out-8.txt  reduce-out-3.txt  reduce-out-9.txt  split-10.txt  split-11.txt  split-12.txt  split-13.txt  split-14.txt  split-15.txt  split-16.txt  split-17.txt  split-18.txt  split-19.txt  split-2.txt  split-20.txt  split-3.txt  split-4.txt  split-5.txt  split-6.txt  split-7.txt  split-8.txt  split-9.txt
Project2/cross-test/: map-out-1.txt  map-out-2.txt  map-out-3.txt  map-out-4.txt  map-out-5.txt  map-out-6.txt  split-1.txt  split-2.txt  split-3.txt  split-4.txt  split-5.txt
Project2/cross-test/Skewed_output/: alphabeticalTextFile.txt  federalist.txt  map-out-1.txt  map-out-2.txt  map-out-3.txt  map-out-4.txt  map-out-5.txt  map-out-6.txt  split-1.txt  split-2.txt  split-3.txt  split-4.txt  split-5.txt  split-6.txt
(+27 files in other folders)
